--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+
+<html>
+
+<body>
 1.Name :  Ishtiyaq Ahmad
 Ph.D : January  2019-Present
 Research interests : Crystal Engineering ,Noval Supramolecular synthons , co-crystals, molecular salts, Theoritical investigations ( crystal explorer). crystallographic investigations- crystal packing,
@@ -6,3 +10,6 @@ M.sc : Jiwaji University, Gwalior.
 Email : Ishtiyaq.chem@gmail.com
 Mob : 9682518074
 
+...
+</body>
+</html>
