--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <body>
   <h2> Ishtiyaq Ahmad </h2>
   
+  Ph.D : January  2019-Present
+Research interests : Crystal Engineering ,Noval Supramolecular synthons , co-crystals, molecular salts, Theoritical investigations ( crystal explorer). crystallographic investigations- crystal packing,
+B.sc : University of Kashmir, Srinagar.
+M.sc : Jiwaji University, Gwalior.
+Email : Ishtiyaq.chem@gmail.com
+Mob : 9682518074
+
   
 </body>
 </html>
