--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Generic Research Lab Template - Home</title>
+      <title>Research Group- Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Research Lab, Home, Velit Aliquet Sagittis University">
+      <meta name="description" content="Dr Aijaz Research Group, Department of Chemistry, University of Kashmir">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,8 +14,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead"> Department of Chemistry, University of Kashmir </p>
+            <h1>Dr Dar Aijaz's Research Group </h1>
          </header>
          <div class="masthead">
             <div class="navbar">
