--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>Research Group- Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Dr Aijaz Research Group, Department of Chemistry, University of Kashmir">
+      <meta name="description" content="Dr. Aijaz's  Research Group, Department of Chemistry, University of Kashmir">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                      <div class="item active">
                         <img src="images/ani-kolleshi-crop3.JPG" class="carousel-image" alt="">                      
                         <div class="carousel-caption">
-                           <h4>Welcome to the Velit Aliquet Sagittis University Research Laboratory</h4>
+                           <h4>Welcome to the Dr. Aijaz's Research Group at Department of Chemistry, University of Kashmir</h4>
                            <!-- -->
                            <p></p>
                         </div>
