--- a/people.html
+++ b/people.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+ <head>
       <meta charset="utf-8">
-      <title>People</title>
+      <title>Research Group- Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Research Lab, Home, Velit Aliquet Sagittis University">
+      <meta name="description" content="Dr. Aijaz's  Research Group, Department of Chemistry, University of Kashmir">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,8 +14,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead"> Department of Chemistry, University of Kashmir </p>
+            <h1>Dr Dar Aijaz's Research Group </h1>
          </header>
          <div class="masthead">
             <div class="navbar">
@@ -51,18 +51,23 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                        <img src="thumbs/prof-photo2.jpg" alt="Joe Smith"/>
+                        <a href=">
+                        <img src="people/PI.png" alt="Dar Aijaz Ahmad"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4>Joe Smith</h4>
-                        <p>Assistant Professor of Science and Engineering</p>
-                        <p>Ph.D. in Mechanical Engineering, Lorem Ipsum, 2013<br/>M.S. in Mechanical Engineering, HRV, 2011<br/>BASc in Engineering, University of Lorem Ipsum, 2009</p>
+                        <h4>Dar Aijaz Ahmad</h4>
+                        <p>Assistant Professor, Department of Chemistry</p>
+                        <p>Ph.D. in Organic Chemistry from _____________ in ________<br/>
+                        M.S. in Chemistry in __________, 2011<br/>
+                                       B. Sc from ________ in ________</p>
                         <p><b>Phone: </b>(999) 999-9999 </p>
-                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">your.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                        <p><b><a href="https://www.myperfectcv.co.uk/cv-examples/chemistry-lab-technician-cv-sample">CV</a>, <a href="http://scholar.google.com">Google Scholar</a>, <a href="https://www.linkedin.com">Linkedin</a>, <a href="http://www.researchgate.net">ResearchGate</a></b></p>
+                        <p><b>Email: </b><a href="mailto:aijazpapers@gmail.com">aijazpapers@gmail.com</a></p>
+                        <p><b>Address: </b> me , from this Gully, Falani Mohalla</p>
+                        <p><b><a href="http://kashmiruniversity.net/Diqa/Resume/aijazdiqa.pdf">CV</a>, 
+                        <a href="http://scholar.google.com">Google Scholar</a>,
+                        <a href="https://www.linkedin.com">Linkedin</a>,
+                        <a href="http://www.researchgate.net">Research Gate</a></b></p>
                      </div>
                   </div>
                </section>
