--- a/people.html
+++ b/people.html
@@ -52,7 +52,7 @@
                   <div class="row-fluid">
                      <div class="span3">
                         <a href=">
-                        <img src="people/PI.png" alt="Dar Aijaz Ahmad"/>
+                        <img src="https://github.com/aijazpapers/daraijaz/blob/main/people/PI.png" alt="Dar Aijaz Ahmad"/>
                         </a>
                      </div>
                      <div class="span9">
