--- a/people.html
+++ b/people.html
@@ -79,15 +79,21 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://unsplash.com/photos/aaaGLiTRqkg" class="thumbnail">
-                        <img src="thumbs/jane-carmona.jpg" alt="Jane Carmona"/>
+                        <a href="" class="thumbnail">
+                        <img src="people/ishtiyaq.jpg" alt="Ishtiyaq Ahmad"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4><a href="https://unsplash.com/photos/aaaGLiTRqkg">Jane Carmona</a></h4>
-                        <p>Jane received her B.E. in Mechanical Engineering from the Lorem Ipsum University of Lorem Ipsum in 2015 with High Honors. Her current research focuses on metus libero, eleifend sit amet pretium et, porta ac urna. Suspendisse ullamcorper mollis ligula et fermentum. .</p>
-                        <p><b>Email: </b><a href="mailto:jane.email@uni.edu">jane.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
+                        <h4><a href="people/ishtiyaq.jpg">Ishtiyaq Ahmad</a></h4>
+                                                         <p> Name: Ishtiyaq Ahmad </p>
+                                                         <p> Ph.D: </p>
+                                                         <Research Interests: > </p>
+                                                         <p>B.Sc </p>
+                                                         <p>M.Sc </p>
+                                                         <p>Email: </p>
+                                                         <p> Cell:</p>
+                                                         
+                                                         
                      </div>
                   </div>
                   <hr>
@@ -98,11 +104,14 @@
                         </a>
                      </div>
                      <div class="span9">
-                        <h4><a href="https://unsplash.com/photos/LUdelQ2EO2g">Ronny Simon</a></h4>
-                        <p>Ronny received his B.Tech in Electrical Engineering from the Lorem Ipsum Institute of Technology. His current research focuses on ullamcorper nibh ut orci eleifend varius elementum ut augue. Proin ornare, arcu et efficitur laoreet, purus ante dictum leo, vel pulvinar velit leo sed nunc. </p>
-                        <p><b>Email: </b><a href="mailto:ronny.email@uni.edu">ronny.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                     </div>
+                        <h4><a href="">Ishtiyaq</a></h4>
+                          <p> Name: Ishtiyaq Ahmad </p>
+                                                         <p> Ph.D: </p>
+                                                         <Research Interests: > </p>
+                                                         <p>B.Sc </p>
+                                                         <p>M.Sc </p>
+                                                         <p>Email: </p>
+                                                         <p> Cell:</p>
                   </div>
                   <hr>
                   <div class="row-fluid">
@@ -112,11 +121,13 @@
                         </a>
                      </div>
                      <div class="span9">
-                        <h4><a href="https://unsplash.com/photos/nomivMNW07o">Jenny Lopez</a></h4>
-                        <p>Jenny received her B.S. degree in Mechanical Engineering from the Lorem Ipsum Technical University in 2012 with High Honors, where she focused on quis nisl vitae lectus pharetra dapibus. In sit amet erat purus. Proin finibus, nunc sed faucibus molestie, risus tellus sodales elit, nec luctus urna augue vitae dolor. Curabitur nisl eros, rhoncus eget mauris vitae.</p>
-                        <p><b>Email: </b><a href="mailto:jenny.email@uni.edu">jenny.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                     </div>
+                          <p> Name: Ishtiyaq Ahmad </p>
+                                                         <p> Ph.D: </p>
+                                                         <Research Interests: > </p>
+                                                         <p>B.Sc </p>
+                                                         <p>M.Sc </p>
+                                                         <p>Email: </p>
+                                                         <p> Cell:</p>
                   </div>
                   <hr>
                </section>
