--- a/people.html
+++ b/people.html
@@ -53,7 +53,7 @@
                   <div class="row-fluid">
                      <div class="span3">
                         <a href=">
-                        <img src="people/PI.png" alt="Dar Aijaz Ahmad"/>
+                        <img src="people/PI.jpg" alt="Dar Aijaz Ahmad"/>
                         </a>
                      </div>
                      <div class="span9">
