--- a/people.html
+++ b/people.html
@@ -52,7 +52,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href=">
+                        <a href="">
                         <img src="people/PI.jpg" alt="Dar Aijaz Ahmad"/>
                         </a>
                      </div>
