--- a/people.html
+++ b/people.html
@@ -92,7 +92,7 @@
                                                          <p>M.Sc: Jiwaji University, Gwalior.</p>
                                                          <p>Email: Ishtiyaq.chem@gmail.com</p>
                                                          <p> Cell: 9682518074</p>
-                      <h2> Working On </h2>
+                      <h4> Working On </h4>
                       <p>
                        Rational Utilization of Less Explored and Novel Supramolecular Synthons to Design Bespoke Molecular Complexes.
 Structure predictability in molecular complexes more particularly in case of multicomponent crystals or co-crystals still remains an enigma for crystal engineers and further research efforts are required to understand extant and explore new supramolecular interactions.
@@ -106,35 +106,46 @@ Structure predictability in molecular complexes more particularly in case of mul
                   <hr>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://unsplash.com/photos/LUdelQ2EO2g" class="thumbnail">
-                        <img src="thumbs/ronny-sison.jpg" alt="Ronny Simon"/>
+                        <a href="" class="thumbnail">
+                        <img src="people/adil.jpg" alt="Aadil Ayoub Ahangar"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4><a href="">Ishtiyaq</a></h4>
-                          <p> Name: Ishtiyaq Ahmad </p>
-                                                         <p> Ph.D: </p>
-                                                         <Research Interests: > </p>
-                                                         <p>B.Sc </p>
-                                                         <p>M.Sc </p>
-                                                         <p>Email: </p>
-                                                         <p> Cell:</p>
+                        <h4><a href="">Aadil Ayoub </a></h4>
+                          <p> Name: Aadil Ayoub Ahangar </p>
+                                                         <p>Ph.D : January 2019- Present</p>
+                                                         <p> Crystal Engineering , Halogen bonding , Theoritical studies</p>
+                                                         <p>B.Sc: University of Kashmir, Srinagar </p>
+                                                         <p>M.Sc: University of Kashmir, Srinagar</p>
+                                                         <p>Email: : aadilchm90@gmail.com </p>
+                                                         <p> Cell:8825048813</p>
+                      <h4> Working On </h4>
+                      <p>
+                       Halogen bonded molecular assemblies: An approach to convert molecules into functional materials, but the interaction is still in its infancy so needs more threshold and attention in order to explore much more that may benefit supramolecular chemistry in general and crystal engineering in particular.
+                      </p>
                   </div>
                   <hr>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://unsplash.com/photos/nomivMNW07o" class="thumbnail">
-                        <img src="thumbs/graduate-1.jpg" alt="Jenny Lopez"/>
+                        <a href="" class="thumbnail">
+                        <img src="people/asif.jpg" alt="Asif Ahmad"/>
                         </a>
                      </div>
                      <div class="span9">
-                          <p> Name: Ishtiyaq Ahmad </p>
-                                                         <p> Ph.D: </p>
-                                                         <Research Interests: > </p>
-                                                         <p>B.Sc </p>
-                                                         <p>M.Sc </p>
-                                                         <p>Email: </p>
-                                                         <p> Cell:</p>
+                          <p> Name: Asif Ahmad Malik </p>
+                                                         <p> Ph.D : January 2020 – Present </p>
+                                                         <p>Research Interests: Crystal Engineering , Neutraceutical co-crystals , salts ,bioavailibilty, solubility. </p>
+                                                         <p>B.Sc: University of Kashmir, Srinagar</p>
+                                                         <p>M.Sc: Jiwaji University, Gwalior </p>
+                      <p> M.Phil: Jiwaji University, Gwalior </p>
+                                                         <p>Email: malikaashu30gmail.com </p>
+                                                         <p> Cell: 7006544322</p>
+                      
+                       <h4> Working On </h4>
+                      <p>
+                       Halogen bonded molecular assemblies: An approach to convert molecules into functional materials, but the interaction is still in its infancy so needs more threshold and attention in order to explore much more that may benefit supramolecular chemistry in general and crystal engineering in particular.
+                      </p>
+                      Crystal Engineering aims at understanding intermolecular interactions in the context of crystal packing and utilize such understandings to develop nutraceutical cocrystals with appropriate coformers to enhance their solubility, permeability and stability resulting in improved bioavailability. 
                   </div>
                   <hr>
                </section>
