--- a/people.html
+++ b/people.html
@@ -107,7 +107,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="" class="thumbnail">
-                        <img src="people/adil.jpg" alt="Aadil Ayoub Ahangar"/>
+                        <img src="people/aadil.jpg" alt="Aadil Ayoub Ahangar"/>
                         </a>
                      </div>
                      <div class="span9">
@@ -132,6 +132,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                         </a>
                      </div>
                      <div class="span9">
+                      <h4><a href="">Asif Ahmad </a></h4>
                           <p> Name: Asif Ahmad Malik </p>
                                                          <p> Ph.D : January 2020 – Present </p>
                                                          <p>Research Interests: Crystal Engineering , Neutraceutical co-crystals , salts ,bioavailibilty, solubility. </p>
