--- a/people.html
+++ b/people.html
@@ -65,6 +65,7 @@
                         <p><b>Phone: </b>(999) 999-9999 </p>
                         <p><b>Email: </b><a href="mailto:aijazpapers@gmail.com">aijazpapers@gmail.com</a></p>
                         <p><b>Address: </b> me , from this Gully, Falani Mohalla</p>
+                      <p> Research Interests: Synthesis, characterization, applications and crystallographic studies of various types of inorganic materials like Metal Organic frameworks, Coordination complexes, single molecule magnets, etc., Supramolecular chemistry-Structural investigations and biological properties of drug based co-crytals. </p>
                         <p><b><a href="http://kashmiruniversity.net/Diqa/Resume/aijazdiqa.pdf">CV</a>, 
                         <a href="http://scholar.google.com">Google Scholar</a>,
                         <a href="https://www.linkedin.com">Linkedin</a>,
