--- a/publications.html
+++ b/publications.html
@@ -52,18 +52,16 @@
 							<h3>Journal Publications</h3>
 						</div>
 						<section id="2020">
-							<h3>2020</h3>
-							<br/>
+							<h3>2020</h3>							
 							<div class="span9">
-								<h4>Irreversible Thermochromism in Sulfonated Anils</h4>
-								<br/>
+								<h4>Irreversible Thermochromism in Sulfonated Anils</h4>								
 								<p>AA Dar, AA Ganie</p>
 								<a href="">Crystal Growth & Design 2020, 20, 6, 3888–3897 </a>
 							</div>
-							<hr>
+							<hr style="width: 1px;">
 							<div class="span9">
 								<h4>Achievement of enhanced solubility and improved optics in the molecular complexes based on sulfonate-pyridinium supramolecular synthon</h4>
-								<br/>
+								
 								<p>R. I Ahmad, AA Ganie, AA Dar</p>
 								<a href="">CrystEngComm. 2020, 22, 3933-3942</a>
 							</div>
