--- a/publications.html
+++ b/publications.html
@@ -57,13 +57,15 @@
 								<h4>Irreversible Thermochromism in Sulfonated Anils</h4>								
 								<p>AA Dar, AA Ganie</p>
 								<a href="">Crystal Growth & Design 2020, 20, 6, 3888–3897 </a>
+								<hr style="border-top: 1px solid green;">
 							</div>
-							<hr style="width: 1px;">
+							
 							<div class="span9">
 								<h4>Achievement of enhanced solubility and improved optics in the molecular complexes based on sulfonate-pyridinium supramolecular synthon</h4>
 								
 								<p>R. I Ahmad, AA Ganie, AA Dar</p>
 								<a href="">CrystEngComm. 2020, 22, 3933-3942</a>
+								<hr style="border-top: 1px solid green;">
 							</div>
 						</section>				
 					</section>
