--- a/publications.html
+++ b/publications.html
@@ -52,9 +52,9 @@
 							<h3>Journal Publications</h3>
 						</div>
 						<section id="2020">
-							<h3>2020</h3>							
+							<h3>2020</h3>
 							<div class="span9">
-								<h4>Irreversible Thermochromism in Sulfonated Anils</h4>								
+								<h4>Irreversible Thermochromism in Sulfonated Anils</h4>
 								<p>AA Dar, AA Ganie</p>
 								<a href="">Crystal Growth & Design 2020, 20, 6, 3888–3897 </a>
 								<hr style="border-top: 1px solid green;">
@@ -67,10 +67,32 @@
 								<a href="">CrystEngComm. 2020, 22, 3933-3942</a>
 								<hr style="border-top: 1px solid green;">
 							</div>
-						</section>				
+						</section>
+						<section id="2019">
+							<h3>2019</h3>
+							<br/>
+							<div class="span9">
+								<h4>Sulfonate∙∙∙Pyridinium Supramolecular Synthon: A Robust Interaction Utilized to
+								Design Molecular Assemblies
+								</h4>
+								<br/>
+								<p>Arshid A. Ganie, Aadil A. Ahangar, Aijaz A.
+									Dar
+								</p>
+								<a href="">Crystal Growth & Design 2019, 19 (8), 4650-4660</a>
+							</div>
+							<div class="span9">
+								<h4>Utility of Bis-4-pyridines as Supramolecular Linkers for 5-Sulfosalicylic Acid Centers:
+								Structural and Optical Investigations
+								</h4>
+								<br/>
+								<p>Arshid A. Ganie, Pratap Vishnoi, Aijaz A. Dar</p>
+								<a > Crystal Growth & Design 2019, 19, 2289-2297</a>
+							</div>
+						</section>
 					</section>
 				</div>
-			
+				
 				
 			</div>
 		</div>
