--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,7 @@
 									Dar
 								</p>
 								<a href="">Crystal Growth & Design 2019, 19 (8), 4650-4660</a>
+								<hr style="border-top: 1px solid green;">
 							</div>
 							<div class="span9">
 								<h4>Utility of Bis-4-pyridines as Supramolecular Linkers for 5-Sulfosalicylic Acid Centers:
@@ -87,6 +88,7 @@
 								
 								<p>Arshid A. Ganie, Pratap Vishnoi, Aijaz A. Dar</p>
 								<a > Crystal Growth & Design 2019, 19, 2289-2297</a>
+								<hr style="border-top: 1px solid green;">
 							</div>
 						</section>
 					</section>
