--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                <div id="main-carousel" class="carousel slide">
                   <div class="carousel-inner">
                      <div class="item active">
-                        <img src="images/ani-kolleshi-crop3.JPG" class="carousel-image" alt="">                      
+                        <img src="images/carousel/honeycombstructure.png" class="carousel-image" alt="">                      
                         <div class="carousel-caption">
                            <h4>Welcome to the Dr. Aijaz's Research Group at Department of Chemistry, University of Kashmir</h4>
                            <!-- -->
@@ -48,16 +48,16 @@
                         </div>
                      </div>
                      <div class="item">
-                        <img src="images/microscope-crop1.JPG" class="carousel-image" alt="">
+                        <img src="images/carousel/interlockedsupramolecule.png" class="carousel-image" alt="">
                         <div class="carousel-caption">
-                           <h4>Lab Photos</h4>
+                           <h4>Type the Caption of the Image here</h4>
                            <p></p>
                         </div>
                      </div>
                      <div class="item">
-                        <img src="images/building-crop1.JPG" class="carousel-image" alt="">
+                        <img src="images/carousel/pic4.png" class="carousel-image" alt="">
                         <div class="carousel-caption">
-                           <h4>Main Building Photo</h4>
+                           <h4>Type the Caption of the Image here</h4>
                            <p></p>
                         </div>
                      </div>
