--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead"> Department of Chemistry, University of Kashmir </p>
+            <h1>Dr Dar Aijaz's Research Group </h1>
          </header>
          <div class="masthead">
             <div class="navbar">
