--- a/index.html
+++ b/index.html
@@ -55,7 +55,28 @@
                         </div>
                      </div>
                      <div class="item">
+                        <img src="images/carousel/pic3.png" class="carousel-image" alt="">
+                        <div class="carousel-caption">
+                           <h4>Type the Caption of the Image here</h4>
+                           <p></p>
+                        </div>
+                     </div>
+                      <div class="item">
                         <img src="images/carousel/pic4.png" class="carousel-image" alt="">
+                        <div class="carousel-caption">
+                           <h4>Type the Caption of the Image here</h4>
+                           <p></p>
+                        </div>
+                     </div>
+                     <div class="item">
+                        <img src="images/carousel/pic5.png" class="carousel-image" alt="">
+                        <div class="carousel-caption">
+                           <h4>Type the Caption of the Image here</h4>
+                           <p></p>
+                        </div>
+                     </div>
+                     <div class="item">
+                        <img src="images/carousel/pic6.png" class="carousel-image" alt="">
                         <div class="carousel-caption">
                            <h4>Type the Caption of the Image here</h4>
                            <p></p>
