--- a/people.html
+++ b/people.html
@@ -59,7 +59,7 @@
                      <div class="span9">
                         <h4>Dar Aijaz Ahmad</h4>
                         <p>Assistant Professor, Department of Chemistry</p>
-                        <p>Ph.D. in Organic Chemistry from _____________ in ________<br/>
+                        <p>Ph.D. in Organic Chemistry from IIT Mumbai in 2014<br/>
                         M.S. in Chemistry in __________, 2011<br/>
                                        B. Sc from ________ in ________</p>
                         <p><b>Phone: </b>(999) 999-9999 </p>
