--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 								<h4>Achievement of enhanced solubility and improved optics in the molecular complexes based on sulfonate-pyridinium supramolecular synthon</h4>
 								
 								<p>R. I Ahmad, AA Ganie, AA Dar</p>
-								<a href="">CrystEngComm. 2020, 22, 3933-3942</a>
+								<a href="https://doi.org/10.1039/D0CE00346H">CrystEngComm. 2020, 22, 3933-3942</a>
 								<hr style="border-top: 1px solid green;">
 							</div>
 						
