--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                         <h4>Office Hours:</h4>
                         <p>Monday-Friday (8.00am - 5.00pm)</p>
                         <hr>
-                        <p><a href="http://scholar.google.com">Google Scholar</a></p>
+                        <p><a href="https://scholar.google.co.in/citations?user=kwjoXgoAAAAJ&hl=en">Google Scholar</a></p>
                         <p><a href="http://www.researchgate.net">ResearchGate</a></p>
                         <br/>
                         <p>
