--- a/people.html
+++ b/people.html
@@ -88,7 +88,7 @@
                         <h4><a href="people/ishtiyaq.jpg">Ishtiyaq Ahmad</a></h4>
                                                          <p> Name: Ishtiyaq Ahmad </p>
                                                          <p> Ph.D: January  2019-Present </p>
-                                                         <p> Research Interests: Crystal Engineering ,Noval Supramolecular synthons , co-crystals, molecular salts, Theoritical investigations ( crystal explorer). crystallographic investigations- crystal packing  </p>
+                                                         <p> Research Interests: Crystal Engineering ,Noval Supramolecular synthons , co-crystals, molecular salts, thermochromism Theoritical investigations ( crystal explorer). crystallographic investigations- crystal packing  </p>
                                                          <p>B.Sc : University of Kashmir, Srinagar</p>
                                                          <p>M.Sc: Jiwaji University, Gwalior.</p>
                                                          <p>Email: Ishtiyaq.chem@gmail.com</p>
