--- a/people.html
+++ b/people.html
@@ -108,7 +108,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="" class="thumbnail">
-                        <img src="Picture.jpg" alt="Aadil Ayoub Ahangar"/>
+                        <img src="aadil.jpg" alt="Aadil Ayoub Ahangar"/>
                         </a>
                      </div>
                      <div class="span9">
