--- a/people.html
+++ b/people.html
@@ -129,7 +129,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="" class="thumbnail">
-                        <img src="people/asif.jpg" alt="Asif Ahmad"/>
+                        <img src="C:\Users\HP\Desktop\asif malik.jpg" alt="Asif Ahmad"/>
                         </a>
                      </div>
                      <div class="span9">
