--- a/people.html
+++ b/people.html
@@ -136,7 +136,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                       <h4><a href="">Asif Ahmad </a></h4>
                           <p> Name: Asif Ahmad Malik </p>
                                                          <p> Ph.D : January 2020 – Present </p>
-                                                         <p>Research Interests: Crystal Engineering , Neutraceutical co-crystals ,polymorphism, salts ,bioavailibilty, solubility. </p>
+                                                         <p>Research Interests: Crystal Engineering , Neutraceutical co-crystals ,salts ,bioavailibilty, solubility. </p>
                                                          <p>B.Sc: University of Kashmir, Srinagar</p>
                                                          <p>M.Sc: Jiwaji University, Gwalior </p>
                       <p> M.Phil: Jiwaji University, Gwalior </p>
