--- a/people.html
+++ b/people.html
@@ -108,7 +108,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="" class="thumbnail">
-                        <img src="aadil.jpg" alt="Aadil Ayoub Ahangar"/>
+                        <img src="people/aadil.jpg" alt="Aadil Ayoub Ahangar"/>
                         </a>
                      </div>
                      <div class="span9">
@@ -145,9 +145,10 @@ Structure predictability in molecular complexes more particularly in case of mul
                       
                        <h4> Working On </h4>
                       <p>
-                       Halogen bonded molecular assemblies: An approach to convert molecules into functional materials, but the interaction is still in its infancy so needs more threshold and attention in order to explore much more that may benefit supramolecular chemistry in general and crystal engineering in particular.
+                       Crystal engineering of the pharmaceuticals for biological and material applications.
                       </p>
-                      Crystal Engineering aims at understanding intermolecular interactions in the context of crystal packing and utilize such understandings to develop nutraceutical cocrystals with appropriate coformers to enhance their solubility, permeability and stability resulting in improved bioavailability. 
+                      <p>
+                       The design and syntesis of pharmaceutical co-crystals have received great interest in the recent years. Co-crystalization of drug substances offers a tremendous oppurtunity  for the development of new drug products with superior physical and pharmacological properties such as solubility, stability,hygroscopicity,dissolution rates and bioavailibility.Further more the material properties of pharmaceutical co-crystal have not been pursued with great vigor and we beleive that the materials acan open new windows for exploration in material field.
                   </div>
                   <hr>
                     <div class="row-fluid">
