--- a/people.html
+++ b/people.html
@@ -148,7 +148,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                        Crystal engineering of the pharmaceuticals for biological and material applications.
                       </p>
                       <p>
-                       The design and syntesis of pharmaceutical co-crystals have received great interest in the recent years. Co-crystalization of drug substances offers a tremendous oppurtunity  for the development of new drug products with superior physical and pharmacological properties such as solubility, stability,hygroscopicity,dissolution rates and bioavailibility.Further more the material properties of pharmaceutical co-crystal have not been pursued with great vigor and we beleive that the materials acan open new windows for exploration in material field.
+                       The design and synthesis of pharmaceutical co-crystals have received great interest in the recent years. Co-crystalization of drug substances offers a tremendous oppurtunity  for the development of new drug products with superior physical and pharmacological properties such as solubility, stability,hygroscopicity,dissolution rates and bioavailibility.Further more the material properties of pharmaceutical co-crystal have not been pursued with great vigor and we beleive that the materials can open new windows for exploration in material field.
                    </p>
                    </div>
                   <hr>
