--- a/people.html
+++ b/people.html
@@ -59,8 +59,8 @@
                      <div class="span9">
                         <h4>Dar Aijaz Ahmad</h4>
                         <p>Assistant Professor, Department of Chemistry</p>
-                        <p>Ph.D. in Organic Chemistry from IIT Mumbai in 2014<br/>
-                        M.S. in Chemistry in __________, 2011<br/>
+                        <p>Ph.D. Inorganic Chemistry from IIT Mumbai in 2014<br/>
+                        M.S. in Chemistry from University of Kashmir,2011<br/f>
                                        B. Sc from ________ in ________</p>
                         <p><b>Phone: </b>(999) 999-9999 </p>
                         <p><b>Email: </b><a href="mailto:aijazpapers@gmail.com">aijazpapers@gmail.com</a></p>
