--- a/people.html
+++ b/people.html
@@ -123,9 +123,10 @@ Structure predictability in molecular complexes more particularly in case of mul
                                                          <p>Email: : aadilchm90@gmail.com </p>
                                                          <p> Cell:8825048813</p>
                       <h4> Working On </h4>
-                      <p>
+                      <p><font color="green" size=15 face="italic">
                        Halogen bonded molecular assemblies: An approach to convert molecules into functional materials, but the interaction is still in its infancy so needs more threshold and attention in order to explore much more that may benefit supramolecular chemistry in general and crystal engineering in particular.
-                      </p>
+                       </font>
+                       </p>
                   </div>
                   <hr>
                   <div class="row-fluid">
@@ -196,7 +197,7 @@ Structure predictability in molecular complexes more particularly in case of mul
                                                          <p> Cell: 7006699810</p>
                       
                        <h4> Working On </h4>
-                      <p> Tuning of emmissive organic materials through crystal engineering approach.
+                      <p> Tuning of emissive organic materials through crystal engineering approach.
                       </p>
                       <p>
                       Designing of donor-Acceptor charge transfer assemblies. The purpose being that to study structure-function relationship. However it is still difficult to figure out the relationship between the materials performance and molecular packing structures clearly, so it is worthwhile to investigate how to control the properties in a desired way in response to various external stimuli such as electric, magnetic, mechanical, optical, thermal and chemical ones
