--- a/people.html
+++ b/people.html
@@ -11,7 +11,7 @@
       <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
       <link href="css/theme.css" rel="stylesheet">
    </head>
-   <body bgcolour="pink">
+   <body bgcolour="green">
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> Department of Chemistry, University of Kashmir </p>
