--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
 							
 							<h3>2021</h3>
 							<div class="span9" style="width:100%">
-								<h4>Organic Co-crystal Semiconductors.A cryatal Engineering Perspective</h4>
+								<h4>Organic Co-crystal Semiconductors.A crystal Engineering Perspective</h4>
 								<p>AA Dar, Shahida Rashid</p>
 								<a href="https://doi.org/10.1039/D1CE01117K">	CrystEngComm, 2021 </a>
 								<hr style="border-top: 1px solid green;">
