--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
       <link href="css/theme.css" rel="stylesheet">
    </head>
-   <body>
+   <body bgcolor="green">
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> Department of Chemistry, University of Kashmir </p>
-            <h1>Dr Dar Aijaz's Research Group 2021 </h1>
+            <h1>Dr. Dar Aijaz's Research Group 2021 </h1>
          </header>
          <div class="masthead">
             <div class="navbar">
